# px4-sitl-doctor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUGGING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  compat_matrix_update.md  feature_request.md  security.md
.github/workflows/: label-issues.yml  publish.yml  stale.yml  version-monitor.yml
docs/: semi-annual-checklist.md
px4_doctor/: __init__.py  __main__.py  cli.py  fixer.py  init_guide.py  platform_utils.py  report.py  runner.py  snapshot.py
px4_doctor/checkers/: __init__.py  base.py  env_check.py  gazebo_check.py  library_check.py  microxrce_check.py  network_check.py  os_check.py  port_check.py  px4_check.py  python_check.py  ros2_check.py  workspace_check.py  wsl_check.py
px4_doctor/data/: compatibility.yaml
px4_doctor/models/: __init__.py  compat_matrix.py  result.py
px4_sitl_doctor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: check_versions.py
tests/: conftest.py  test_cli.py  test_cli_new_features.py  test_compat_matrix.py  test_env_check.py  test_fixer.py  test_gazebo_check.py  test_init_guide.py  test_library_check.py  test_microxrce_check.py  test_microxrce_v3.py  test_os_check.py  test_platform_utils.py  test_port_check.py  test_px4_check.py  test_ros2_check.py  test_runner.py  test_snapshot.py  test_workspace_check.py
